--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start" : "node server.cjs"
   },
   "dependencies": {
-    "cuevana3": "^1.0.5",
     "daisyui": "^4.12.23",
     "express": "^4.21.2",
     "react": "^18.3.1",
