--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@devnomic/marquee": "^1.0.2",
+    "@vercel/analytics": "^1.4.1",
     "daisyui": "^4.12.23",
     "express": "^4.21.2",
     "react": "^18.3.1",
