--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DelFi",
+  "name": "DelFilms",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -13,7 +13,7 @@
   "dependencies": {
     "@devnomic/marquee": "^1.0.2",
     "@vercel/analytics": "^1.4.1",
-    "daisyui": "^4.12.23",
+    "daisyui": "4.12.23",
     "express": "^4.21.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
