--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-router-dom": "^7.1.1",
-    "react-spinners": "^0.15.0"
+    "react-spinners": "^0.15.0",
+    "spoiled": "^0.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
